# Axxel-Discovery-Protocol

./: CMakeLists.txt  README  README.md  adp.sh
Test/: LocalNetworkInformation  Temp  adp
app/: CMakeLists.txt
app/src/: CMakeLists.txt  Client.cpp  ControlCenter.cpp  Exception.cpp  LocalNetworkInformation.cpp  Server.cpp  adp_List.nsmap  adp_gsoap.h  axxel_discovery_protokoll.cpp  axxel_discovery_protokoll.h  soapC.cpp  soapClient.cpp  soapClientLib.cpp  soapH.h  soapObject.h  soapProxy.h  soapServer.cpp  soapServerLib.cpp  soapStub.h
doxygen/: adp.ini
doxygen/html/: Client_8cpp_source.html  ControlCenter_8cpp_source.html  Exception_8cpp_source.html  LocalNetworkInformation_8cpp_source.html  Server_8cpp_source.html  adp__gsoap_8h_source.html  annotated.html  axxel__discovery__protokoll_8cpp_source.html  axxel__discovery__protokoll_8h_source.html  classClient-members.html  classClient.html  classControlCenter-members.html  classControlCenter.html  classException-members.html  classException.html  classLocalNetworkInformation-members.html  classLocalNetworkInformation.html  classServer-members.html  classServer.html  classes.html  dir_a8f641299cfea9f7461c2df1141b7786.html  dir_d422163b96683743ed3963d4aac17747.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  structstListContainer-members.html  structstListContainer.html  structstRoutetable-members.html  structstRoutetable.html
doxygen/latex/: annotated.tex  classClient.tex  classControlCenter.tex  classException.tex  classLocalNetworkInformation.tex  classServer.tex  (+6 more)
(+19 files in other folders)
